feature: implementando Escalonador()